--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </div>
                     <div class="border-l-4 border-slate-200 pl-4">
                         <h4 class="font-bold text-slate-900 text-sm">Richard Hennessey</h4>
-                        <p class="text-[9px] font-black text-slate-400 uppercase tracking-wider mt-1 mb-1">GSR Strategy & Operations</p>
+                        <p class="text-[9px] font-black text-slate-400 uppercase tracking-wider mt-1 mb-1">GSR Manager</p>
                         <p class="text-[11px] text-slate-500">Low Complexity SOP Overview.</p>
                     </div>
                 </div>
@@ -317,7 +317,6 @@
                 if (response.ok) { data = await response.json(); }
             } catch (e) { 
                 console.warn("Fetch failed, check data.json file."); 
-                // Default fallback to ensure something displays if repo is missing json
                 data = { sessions: [], upcoming: [] };
             }
             renderSchedule();
