--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
     <nav class="glass-nav sticky top-0 z-50 px-6 py-3 md:px-12 flex justify-between items-center">
         <div class="flex items-center gap-5">
             <div class="logo-container">
-                <!-- Branding: Integrated GSR Logo from repository -->
                 <img src="image_3efc88.jpg" alt="GSR Logo" onerror="this.src='https://ui-avatars.com/api/?name=GSR&background=0064d2&color=fff'">
             </div>
             <div>
@@ -146,6 +145,11 @@
                         <h4 class="font-bold text-slate-900 text-sm">Richard Hennessey</h4>
                         <p class="text-[9px] font-black text-slate-400 uppercase tracking-wider mt-1 mb-1">GSR Manager</p>
                         <p class="text-[11px] text-slate-500">Low Complexity SOP Overview.</p>
+                    </div>
+                    <div class="border-l-4 border-slate-200 pl-4">
+                        <h4 class="font-bold text-slate-900 text-sm">Belen Delgado Larroy</h4>
+                        <p class="text-[9px] font-black text-slate-400 uppercase tracking-wider mt-1 mb-1">GSR Mentoring Lead</p>
+                        <p class="text-[11px] text-slate-500">GSR Mentoring Plan Launch.</p>
                     </div>
                 </div>
                 <div class="mt-10 pt-6 border-t border-slate-50 flex justify-between items-center">
@@ -304,7 +308,7 @@
             <span class="w-1.5 h-1.5 bg-[#f5af02] rounded-full"></span>
             <span class="w-1.5 h-1.5 bg-[#86b817] rounded-full"></span>
         </div>
-        <p class="text-slate-500 text-[10px] font-black uppercase tracking-[0.5em]">Global Service Readiness &bull; Learning Hub v10.0</p>
+        <p class="text-slate-500 text-[10px] font-black uppercase tracking-[0.5em]">Global Service Readiness &bull; Learning Hub v11.0</p>
     </footer>
 
     <script>
